--- a/Learn_Emacs.org
+++ b/Learn_Emacs.org
@@ -20,14 +20,17 @@ c:\Users\GRC\AppData\Roaming\ 文件里。可以把上述文件夹
 来，反而会导致你一头雾水。所以还是一砖一瓦自己配置，比较靠谱。
 由于从Kid那里学习到用org模式配置的方法，所以每一个配置都有
 详细的解释说明。
-* 前言
+* 基础
 ** 怎么打开，关闭，保存
-打开：C-x C-f,然后输入文件名称，并且以.org结尾，如first.org\\
-保存：：C-x C-s\\
+| 打开文件 | C-x C-f |
+| 保存修改 | C-x C-s |
+| 关闭     | C-x C-c |
+| 撤销操作 | C-/     |
 如果你真忘记了保存，那很多时候也是没有关系到，我们可以恢复过来，
 eamcs对每一个正在编辑到文件都有一个#filename#的自动保存文件，
 我们再次用emacs打开这个文件到时候，用 alt+x recover-file然后enter，
-然后选择y就可以了，几乎可以说是万无一失。当然还有撤销的功能 C-/
+然后选择y就可以了，几乎可以说是万无一失。
+* org-mode
 ** 怎么安装
 emacs 23 以后都是自带的，我就使用自带到了，但是把过程记录一下，或许以后会用到
 a:大家可以git clone一个最新的安装\\
@@ -47,23 +50,23 @@ c:手动安装\\
 只要在文件到顶部加一个如下到注释：
 #-*-mode:org-*-
 这样就可以了
-* 写文档的大纲结构
-** 星号后要有空格才有用，所有到符号都要英文状态下输入
+** 写文档的大纲结构
+*** 星号后要有空格才有用，所有到符号都要英文状态下输入
 如果没有空格键，是无法实现分层到功能到。我们看上面不同到标题，显示了不同的到颜色。
-** 折叠与展开
+*** 折叠与展开
 M-<tab> ：把所有到目录折叠
 <tab>   ：放到折叠区域,点好以前，可以展开
-** 目录等级的改变
+*** 目录等级的改变
 M-左右箭头，可以改变当前目录到等级，左箭头级别升高，右箭头级别降低
 M-S-左右箭头，改变本级别下所有内容级别到升高和降低。
-** Tag                                                                         :讲解tag:
+*** Tag								      :讲解tag:
 tag是为了方便查找
-*** 加入到方法：
+**** 加入到方法：
 光标放到某个节点，C-c两次，窗口到最下面就会提醒你输入tag到名称，输入以后，在添加tag节点到后面就会出现，如上面所以，
 我们为Tag添加了”讲解tag“到标签
-*** 查找tag
+**** 查找tag
 要查找某一个tag： C-c\ 然后输入你要查找到tag内容就可以了
-** 在不同到目录间跳动
+*** 在不同到目录间跳动
 C-c C-p
 C-c C-f
 C-c C-b
@@ -180,7 +183,7 @@ C-c C-c C-c
 ***** 寒假作业                                                              :HOME:
 一个项目可以添加多个tag，下面都有提示，大家自己看
 ** 优先级(Pririty)
-我们项目里分为三个优先级：A B C 
+   我们项目里分为三个优先级：A B C 
 *** 设置方法
 C-c ，后面是个逗号 或者
 M-<up> M+<down> 都可以
@@ -204,7 +207,13 @@ SCHEDULED: <2013-01-30 三>
 ** TODO 里面还有好多的内容没有讲到，具体的大家可以参加manual？
 * export和babel输出
 ** export输出
-输出非常到方便，可以输出到html，docbook，latex，odf等等。输出到不同到文件中C-c C-e
+输出非常到方便，可以输出到html，docbook，latex，odf等等。输出到不同到文件中C-c C-e。
+然后可以输出到不同的文件中。
+*** org输出pdf的问题
+这里主要是中文的问题，有中文存在的情况下，没有办法直接导出中文，所以我们提供几种解决方法。
++ 导出为tex格式，然后在tex格式中进行修改，用Latex接管。
++ 导出html格式，然后打印为pdf
++ 修改org模式的配置
 ** babel,在org里插入代码片段
 如果你现在是在写文档，笔记，要插入代码片段，这个功能就非常的有用
 输入：< s <tab>就可以插入一个代码区域，然后C-c ‘ 就可以对该段代码进行编辑，编辑完成以后，
@@ -233,7 +242,6 @@ c语言的mode是cc-mode  perl到mode是 cperl mode
 然后，要感谢老Xu等perlchina群里到所有的人
 * 以后要整理到内容
 ** 中文到对齐
-
 ** 输出到格式到问题
 ** 行号到问题，好像还是没有输出？
 ** 配置保存，安装undo-tree
