--- a/config.org
+++ b/config.org
@@ -144,11 +144,29 @@ Major mode for editing c and cpp files.
 ** auto-complete
 ** LaTeX
 ** lisp
-windows 下配置
+*** slime
 #+BEGIN_SRC emacs-lisp
-  (setq inferior-lisp-program "clisp.exe")
-  (load "C:\\quicklisp\\slime-helper.el")
+  ;; slime
+  (when *hack-slime-p*
+    (if *is-mac-p*
+      (progn
+       (setq inferior-lisp-program "sbcl")
+       (load (expand-file-name "~/quicklisp/slime-helper.el"))))
+    (if *is-win-p*
+      (progn
+        (setq inferior-lisp-program "clisp.exe")
+        (load "C:\\quicklisp\\slime-helper.el"))))
+  
 #+END_SRC
+*** emacs-lisp
+#+BEGIN_SRC emacs-lisp
+   ;;; emacs-lisp-mode
+    ;; now '-' is not considered a word-delimiter
+    (add-hook 'emacs-lisp-mode-hook
+              '(lambda ()
+                 (modify-syntax-entry ?- "w")))
+#+END_SRC
+
 ** R语言配置(ESS)
 *** ESS的安装和使用
 + 安装R
