--- a/config.org
+++ b/config.org
@@ -143,11 +143,23 @@ Major mode for editing c and cpp files.
 #+end_src
 ** auto-complete
 ** LaTeX
+#+BEGIN_SRC emacs-lisp
+  (require 'org-latex)
+  (add-to-list 'org-export-latex-classes 
+  '("ctexart" 
+  "\\documentclass{ctexart}"
+       ("\\section{%s}" . "\\section*{%s}")
+       ("\\subsection{%s}" . "\\subsection*{%s}")
+       ("\\subsubsection{%s}" . "\\subsubsection*{%s}")
+       ("\\paragraph{%s}" . "\\paragraph*{%s}")
+       ("\\subparagraph{%s}" . "\\subparagraph*{%s}")))
+#+END_SRC
+
 ** lisp
 *** slime
 #+BEGIN_SRC emacs-lisp
   ;; slime
-  (when *hack-slime-p*
+  ;;(when *hack-slime-p*
     (if *is-mac-p*
       (progn
        (setq inferior-lisp-program "sbcl")
@@ -155,7 +167,7 @@ Major mode for editing c and cpp files.
     (if *is-win-p*
       (progn
         (setq inferior-lisp-program "clisp.exe")
-        (load "C:\\quicklisp\\slime-helper.el"))))
+        (load "C:\\quicklisp\\slime-helper.el")))
   
 #+END_SRC
 *** emacs-lisp
