add latex breaklines=true

--- a/config.org
+++ b/config.org
@@ -165,6 +165,7 @@ Major mode for editing c and cpp files.
   ;;("frame" "single")
   ("frame" "trBL")
   ("frameround" "fttt")
+  ("breaklines=true")
   
                        ))
 #+END_SRC
